[package]
name = "MahitMVPN-Node"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
serde = "1.0.209"
serde_derive = "1.0.209"
tokio = { version = "1.39.3", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
pretty_env_logger = "0.5.0"
log = "0.4.21"
toml = "0.8.19"
serde_json = "1.0.127"
